--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Comic+Neue:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.5.3/lottie_svg.min.js"></script>
-    <title>Gift for my Bebita</title>
+    <title>Gift for my Churra</title>
     <link rel="icon" href="icons/tab-icon.png"/>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -57,7 +57,9 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear My Bebita,</strong>
                                 <p style="text-indent: 15px;">
-                                    Happy Valentine's Day my Love, Thank you for being the most incredible partner anyone could ever ask for. Your kindness, your strength, and your unwavering support mean everything to me. I love you more than words can express, today, every day and forever.
+                                   AMOR MIO:
+NUNCA SE COMO EMPESAR CUANDO ES ALGO PARA TI. SIEMPRE QUE ALGO SE TRATA DE Ti QUIERO HACERLO TAN PERFECTO QUE PIENSO MIL MILLONES DE COSAS AL MISMO TIEMPO. SIMPLEMENTE SIEMPRE BUSCO LOGRAR QUE SEPAS, CONFIRMES, TE MEMORICES: QUE TE AMO MÁS QUE A NADA EN EL UNIVERSO. NO ENTIENDO UN MUNDO SIN TI, SIN TU AMOR, SIN UN NOSOTROS, Y NUNCA VAMOS A NECESITAR ENTENDERLO PORQUE YO CONTIGO VOY AL FINAL DEL MUNDO, PELEO CONTRA ZOMBIES HAMBRIENTOS, MANEJO HASTA EL OTRO COSTADO DEL MAPAMUNDI, ENFRENTO CUALQUIER MONSTRUO Y DESTRUYO CUALQUIER BARRERA. YO POR Ti, TODO. NO SE COMO MÁS EXPLICARTE EL SER TAN MÁGICO QUE ERES, LO QUE GENERAS EN LOS DEMÁS, LA FORMA EN COMO MARCAS DONDE SEA QUE VAYAS. ES COMO Si FUERAS TINTA ROSADA ESCARCHADITA QUE SE DISUELVE EN UN VASO ABURRIDO DE AGUA: LO TRANSFORMAS, LO MEJORAS, LO CONSIENTES, Y YA NO HAY VUELTA ATRÁS ESO HACES CONMIGO CADA SEGUNDO, Y NO HAY FORMA DE AGRADECERTELO.
+TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑAR, REIR, LLORAR,  ESCUHAR, ABRAZAR, OBSERVAR, APRENDER, HABLAR, ESCALAR MONTAÑAS REALES Y MENTALES, TRIUNFAR, BAILAR, CAMBIAR EL MUNDO, INSPIRAR, CREAR,VIVIR, ENVEJECER, DISCUTIR, PROTEGER, LUCHAR, PARA QUE SEAS MI HOGAR. TE PROMETO AMARTE A LO LARGO DE TODA NUESTRA VIDA. GRACIAS POR AMARME ES EL MEJOR REGALO DEL SISTEMA SOLAR. TE AMO, Mi AMOR. SEGUIREMOS CONSTRUYENDO UNA VIDA MARAVILLOSA AGARRADAS DE LA MANO, SIN MIEDO, COMO ME HAS ENSEÑADO, DESDE EL AMOR.
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
@@ -97,7 +99,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebita Chiquitita</h1>
+                        <h1 class="font-extrabold text-lg">Mi pequeña churra</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -158,7 +160,7 @@
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebito Chiquitito</h1>
+                        <h1 class="font-extrabold text-lg">Eres el amor de mi vida</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -233,7 +235,7 @@
                     </div>
                  
                 </div>
-                <h1 class="text-center font-bold text-base">Since October 13, 2022</h1>
+                <h1 class="text-center font-bold text-base">Since August 13-2024</h1>
             </div>
 
 
