--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Lorenita</h1>
-                        <p class="text-base">Cutieta/Pogita/Wifeyta</p>
+                        <h1 class="font-extrabold text-5xl">About Coco</h1>
+                        <p class="text-base">Churra/Coquillo/Mi pequeña</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
