--- a/index.html
+++ b/index.html
@@ -59,13 +59,17 @@
                                 <p style="text-indent: 15px;">
                                    AMOR MIO:
 NUNCA SE COMO EMPESAR CUANDO ES ALGO PARA TI. SIEMPRE QUE ALGO SE TRATA DE Ti QUIERO HACERLO TAN PERFECTO QUE PIENSO MIL MILLONES DE COSAS AL MISMO TIEMPO. SIMPLEMENTE SIEMPRE BUSCO LOGRAR QUE SEPAS, CONFIRMES, TE MEMORICES: QUE TE AMO MÁS QUE A NADA EN EL UNIVERSO. NO ENTIENDO UN MUNDO SIN TI, SIN TU AMOR, SIN UN NOSOTROS, Y NUNCA VAMOS A NECESITAR ENTENDERLO PORQUE YO CONTIGO VOY AL FINAL DEL MUNDO, PELEO CONTRA ZOMBIES HAMBRIENTOS, MANEJO HASTA EL OTRO COSTADO DEL MAPAMUNDI, ENFRENTO CUALQUIER MONSTRUO Y DESTRUYO CUALQUIER BARRERA. YO POR Ti, TODO. NO SE COMO MÁS EXPLICARTE EL SER TAN MÁGICO QUE ERES, LO QUE GENERAS EN LOS DEMÁS, LA FORMA EN COMO MARCAS DONDE SEA QUE VAYAS. ES COMO Si FUERAS TINTA ROSADA ESCARCHADITA QUE SE DISUELVE EN UN VASO ABURRIDO DE AGUA: LO TRANSFORMAS, LO MEJORAS, LO CONSIENTES, Y YA NO HAY VUELTA ATRÁS ESO HACES CONMIGO CADA SEGUNDO, Y NO HAY FORMA DE AGRADECERTELO.
-TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑAR, REIR, LLORAR,  ESCUHAR, ABRAZAR, OBSERVAR, APRENDER, HABLAR, ESCALAR MONTAÑAS REALES Y MENTALES, TRIUNFAR, BAILAR, CAMBIAR EL MUNDO, INSPIRAR, CREAR,VIVIR, ENVEJECER, DISCUTIR, PROTEGER, LUCHAR, PARA QUE SEAS MI HOGAR. TE PROMETO AMARTE A LO LARGO DE TODA NUESTRA VIDA. GRACIAS POR AMARME ES EL MEJOR REGALO DEL SISTEMA SOLAR. TE AMO, Mi AMOR. SEGUIREMOS CONSTRUYENDO UNA VIDA MARAVILLOSA AGARRADAS DE LA MANO, SIN MIEDO, COMO ME HAS ENSEÑADO, DESDE EL AMOR.
+TE ELIGIRÍA UNA Y MIL MILL ONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑAR, REIR, LLORAR,  ESCUHAR, ABRAZAR, OBSERVAR, APRENDER, HABLAR, ESCALAR MONTAÑAS REALES Y MENTALES, TRIUNFAR, BAILAR, CAMBIAR EL MUNDO, INSPIRAR, CREAR,VIVIR, ENVEJECER, DISCUTIR, PROTEGER, LUCHAR, PARA QUE SEAS MI HOGAR. TE PROMETO AMARTE A LO LARGO DE TODA NUESTRA VIDA. GRACIAS POR AMARME ES EL MEJOR REGALO DEL SISTEMA SOLAR. TE AMO, Mi AMOR. SEGUIREMOS CONSTRUYENDO UNA VIDA MARAVILLOSA AGARRADAS DE LA MANO, SIN MIEDO, COMO ME HAS ENSEÑADO, DESDE EL AMOR.
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
                                     <img src="icons/heartarrow.svg" alt="">
                                 </div>
                             </div>
+                            <div class="letter-content">
+                                <!-- texto que se guardará -->
+                            </div>
+                            <button class="save-button">Guardar</button>
                         </div>
                     </div>
                     <div class="heart"></div>
@@ -73,6 +77,7 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
             </div>
         </div>
     </div>
+
     <!-- FIRST CARD -->
     <div class="w-full h-[100vh] z-0 relative">
         <!-- BACKGROUND -->
@@ -102,7 +107,7 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
                         <h1 class="font-extrabold text-lg">Mi pequeña churra</h1>
                     </div>
                     <div>
-                        <img class="w-6" src="icons/x.svg">
+                        <img class="w-6" src="icons/x.svg" alt="">
                     </div>
                 </div>
                 <div class="relative border-b-2 border-black">
@@ -119,8 +124,8 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
                         <img class="-rotate-12 w-full" src="icons/herbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Coco</h1>
-                        <p class="text-base">Churra/Coquillo/Mi pequeña</p>
+                        <h1 class="font-extrabold text-5xl">About Lorenita </h1>
+                        <p class="text-base">Cutieta/Pogita/Wifeyta</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -180,8 +185,8 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
                         <img class="-rotate-12 w-full" src="icons/hisbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Marquito</h1>
-                        <p class="text-base">Cutieto/Pogito/Hubbyto</p>
+                        <h1 class="font-extrabold text-5xl">About COquito</h1>
+                        <p class="text-base">Churrita/Mi vida/Mi niña</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -243,9 +248,17 @@ TE ELIGIRÍA UNA Y MIL MILLONES DE VECES, HOY Y SIEMPRE TE ELIJO PARA AMAR, SOÑ
     </div>
     <script>
         const envelope = document.querySelector('.envelope-wrapper');
+        const saveButton = document.querySelector('.save-button');
+        const letterContent = document.querySelector('.letter-content');
+
+        saveButton.addEventListener('click', () => {
+            const text = letterContent.textContent;
+            envelope.dataset.text = text;
+        });
+
         envelope.addEventListener('click', () => {
-            envelope.classList.toggle('flap');
-            envelope.classList.toggle('open');
+            const text = envelope.dataset.text;
+            letterContent.textContent = text;
         });
     </script>
     
