--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear My Bebita,</strong>
                                 <p style="text-indent: 15px;">
-                                   Lo que siento por ti es tan inmenso
-que no sé cómo contártelo, 
-pero quizás pueda explicártelo con un millón de besos.
+                                   Lo que siento por ti es tan inmenso que no se como explicartelo, si quieres te o explico con un millon de besos
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
