--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear My Bebita,</strong>
                                 <p style="text-indent: 15px;">
-                                   Eres tú lo que me está pasando siempre por la mente, TODO EL TIEMPO. Eres tú lo que se quedó a vivir aquí dentro de mi corazón.
+                                   Te escribo en esta carta lo que quiero decirte desde hace tiempo. Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
+Pero quiero hacerlo porque debes saberlo. Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. Soy tan feliz contigo porque a tu lado siento, por fin, que formó parte del mundo, por tu forma de minimizar los problemas
+ERES LA MUJER DE MI VIDA, Por tu forma de colorear mi vida, por la energía que me das, por las risas compartidas y por los secretos desvelados, por todo eso eres especial.
+TE AMO CON TODO MI SER
+
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
                                 <div class="pana">
