--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <div class="envelope">
                         <div class="letter">
                             <div class="text">
-                                <strong style="font-size: .89rem;">Dear My Bebita,</strong>
+                                <strong style="font-size: .89rem;">Dear Coco,</strong>
                                 <p style="text-indent: 15px;">
                                    Te escribo en esta carta lo que quiero decirte desde hace tiempo. Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
 Pero quiero hacerlo porque debes saberlo. Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. Soy tan feliz contigo porque a tu lado siento, por fin, que formó parte del mundo, por tu forma de minimizar los problemas
