--- a/index.html
+++ b/index.html
@@ -57,10 +57,11 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear Coco,</strong>
                                 <p style="text-indent: 15px;">
-                                   Te escribo en esta carta lo que quiero decirte desde hace tiempo. Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
-Pero quiero hacerlo porque debes saberlo. Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. Soy tan feliz contigo porque a tu lado siento, por fin, que formó parte del mundo, por tu forma de minimizar los problemas
+Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
+Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. Soy tan feliz contigo porque a tu lado siento, por fin, que formó parte del mundo, por tu forma de minimizar los problemas
 ERES LA MUJER DE MI VIDA, Por tu forma de colorear mi vida, por la energía que me das, por las risas compartidas y por los secretos desvelados, por todo eso eres especial.
 TE AMO CON TODO MI SER
+
 
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
@@ -101,7 +102,7 @@ TE AMO CON TODO MI SER
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebita Chiquitita</h1>
+                        <h1 class="font-extrabold text-lg">MI PEQUEÑA PRINCESA</h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg">
@@ -122,7 +123,8 @@ TE AMO CON TODO MI SER
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">About COCO</h1>
-                        <p class="text-base"> Inteligente, Hermosa, MIA, Asombrosa, MIA, Admirable, MIA.</p>
+                        <p class="text-base"> Inteligente, Hermosa, MIA, 
+                            Asombrosa, MIA, Admirable</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -162,7 +164,7 @@ TE AMO CON TODO MI SER
                         <img class="w-5" src="icons/back.svg" alt="">
                     </div>
                     <div>
-                        <h1 class="font-extrabold text-lg">Bebito Chiquitito</h1>
+                        <h1 class="font-extrabold text-lg">TU NEGRO </h1>
                     </div>
                     <div>
                         <img class="w-6" src="icons/x.svg" alt="">
@@ -182,8 +184,9 @@ TE AMO CON TODO MI SER
                         <img class="-rotate-12 w-full" src="icons/hisbleh.svg" alt="">
                     </div>
                     <div class="text-center py-5">
-                        <h1 class="font-extrabold text-5xl">About Marquito</h1>
-                        <p class="text-base">Cutieto/Pogito/Hubbyto</p>
+                        <h1 class="font-extrabold text-5xl">About CATIRE</h1>
+                        <p class="text-base">Hermoso, Suyo, Caballeroso,
+                        Suyo, Amable, Suyo</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
@@ -224,15 +227,15 @@ TE AMO CON TODO MI SER
                 <!-- DATE COUNTER -->
                 <div class="flex gap-5" id="myCountdown">
                     <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="years" class="text-6xl font-bold">0</h1>
+                        <h1 id="years" class="text-6xl font-bold">2024</h1>
                         <p class="font-bold text-xl text-red-700">Year</p>
                     </div>
                     <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="months" class="text-6xl font-bold">0</h1>
+                        <h1 id="months" class="text-6xl font-bold">1o</h1>
                         <p class="font-bold text-xl text-red-700">Months</p>
                     </div>
                     <div class="bg-transparent border-2 border-black rounded-md w-40 h-52 flex justify-center items-center flex-col gap-10">
-                        <h1 id="days" class="text-6xl font-bold">0</h1>
+                        <h1 id="days" class="text-6xl font-bold">12</h1>
                         <p class="font-bold text-xl text-red-700">Days</p>
                     </div>
                  
