--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
                             <div class="text">
                                 <strong style="font-size: .89rem;">Dear Coco,</strong>
                                 <p style="text-indent: 15px;">
-Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
-Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. Soy tan feliz contigo porque a tu lado siento, por fin, que formó parte del mundo, por tu forma de minimizar los problemas
-ERES LA MUJER DE MI VIDA, Por tu forma de colorear mi vida, por la energía que me das, por las risas compartidas y por los secretos desvelados, por todo eso eres especial.
-TE AMO CON TODO MI SER
-
+                                    Quiero decírtelo pero no puedo hacerlo frente a frente porque me enredo en tu mirada, me distraigo con tus labios y me envuelvo en tu sonrisa. Y entonces se me olvidó decírtelo.
+Debes saber que soy tan feliz contigo porque me haces reír, porque me haces temblar, porque me haces soñar. ERES LA MUJER DE MI VIDA, Por tu forma de colorear mi vida, por la energía que me das, por las risas compartidas y por los secretos desvelados, por todo eso eres especial. TE AMO CON TODO MI SER
 
                                 </p>
                                 <p class="love">I LOVE YOU SO MUCH</p>
@@ -123,8 +120,8 @@ TE AMO CON TODO MI SER
                     </div>
                     <div class="text-center py-5">
                         <h1 class="font-extrabold text-5xl">About COCO</h1>
-                        <p class="text-base"> Inteligente, Hermosa, MIA, 
-                            Asombrosa, MIA, Admirable</p>
+                        <p class="text-base"> Inteligente,MIA, 
+                            Asombrosa,MIA, Admirable</p>
                     </div>
                 </div>
                 <!-- IMAGES -->
