--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es"></html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,24 @@
 </head>
 <body class="font-['Comic_Neue'] relative bg-neutral-50">
 
+    <!-- Envelope (Sobre) visible al inicio -->
+    <div id="envelope-section" class="fixed inset-0 flex items-center justify-center bg-cover bg-center z-30" style="background-image: url('img/back.jpg');">
+        <div class="envelope-wrapper relative cursor-pointer" onclick="showSection('section-letter')"></div>
+            <div class="envelope"></div>
+            <div class="heart absolute -top-6 left-1/2 -translate-x-1/2"></div>
+        </div>
+    </div>
+
+    <!-- Music Player -->
     <div id="musicPlayerContainer" class="fixed left-6 bottom-6 z-20 hidden">
-        <div class="music-container bg-neutral-100 border-2 border-black rounded-md flex items-center px-4 py-3 shadow-lg">
+        <div class="music-container bg-neutral-100 border-2 border-black rounded-md flex items-center px-4 py-3 shadow-lg"></div>
             <button class="toggle-player bg-neutral-100 border-2 border-black rounded-full p-1 mr-3" onclick="toggleMusicPlayer()">
                 <img src="icons/close.svg" alt="Close" class="w-6 h-6">
             </button>
             <div class="avatar w-14 mr-4">
                 <img src="icons/pinkheart.svg" alt="Avatar" class="w-full border-2 border-black rounded-md bg-white">
             </div>
-            <div class="player flex items-center w-full h-[70px]">
+            <div class="player flex items-center w-full h-[70px]"></div>
                 <div class="sound-bars-lottie mr-3">
                     <div class="sound-bars"></div>
                 </div>
@@ -45,7 +54,8 @@
         </div>
     </div>
 
-    <section id="section-letter" class="section relative w-full min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('img/back.jpg');">
+    <!-- Carta principal -->
+    <section id="section-letter" class="section hidden relative w-full min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('img/back.jpg');">
         <div class="container flex items-center justify-center">
             <div class="envelope-wrapper relative">
                 <div class="envelope">
@@ -73,6 +83,7 @@
         </div>
     </section>
 
+    <!-- About COCO -->
     <section id="section-coco" class="section hidden relative w-full min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('img/back.jpg');">
         <div class="absolute inset-0 flex items-center justify-center">
             <div class="window bg-neutral-100 border-2 border-black rounded-md shadow-md hover:shadow-xl duration-150 hover:scale-105 w-full max-w-2xl flex flex-col relative">
@@ -104,6 +115,7 @@
         </div>
     </section>
 
+    <!-- About CATIRE -->
     <section id="section-catire" class="section hidden relative w-full min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('img/back.jpg');">
         <div class="absolute inset-0 flex items-center justify-center">
             <div class="window bg-neutral-100 border-2 border-black rounded-md shadow-md hover:shadow-xl duration-150 hover:scale-105 w-full max-w-2xl flex flex-col relative">
@@ -135,6 +147,7 @@
         </div>
     </section>
 
+    <!-- Countdown -->
     <section id="section-countdown" class="section hidden relative w-full min-h-screen flex items-center justify-center bg-cover bg-center" style="background-image: url('img/back.jpg');">
         <div class="absolute inset-0 flex items-center justify-center">
             <div class="flex flex-col bg-neutral-100 border-2 border-black rounded-md shadow-md px-8 pb-6 pt-12 relative gap-6 max-w-3xl w-full">
@@ -162,6 +175,30 @@
             </div>
         </div>
     </section>
+
+    <script>
+    // Mostrar solo la sección seleccionada
+    function showSection(sectionId) {
+        // Oculta todas las secciones
+        document.querySelectorAll('.section').forEach(sec => sec.classList.add('hidden'));
+        // Muestra la sección seleccionada
+        document.getElementById(sectionId).classList.remove('hidden');
+        // Si es la carta, oculta el sobre
+        if (sectionId === 'section-letter') {
+            document.getElementById('envelope-section').classList.add('hidden');
+        }
+    }
+
+    // Opcional: Si quieres que al recargar vuelva a mostrar el sobre
+    window.onload = function() {
+        document.querySelectorAll('.section').forEach(sec => sec.classList.add('hidden'));
+        document.getElementById('envelope-section').classList.remove('hidden');
+    }
+    </script>
+    <script src="app.js"></script>
+</body>
+</html>
+
 
     <script src="app.js"></script>
 </body>
